--- a/.github/workflows/main_webpedidostefa.yml
+++ b/.github/workflows/main_webpedidostefa.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -34,7 +34,7 @@ jobs:
           path: ${{env.DOTNET_ROOT}}/myapp
 
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     needs: build
     environment:
       name: 'Production'
@@ -51,9 +51,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_2DC4D6E861764758890D5A556811CCD0 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_DB70317AC0154D419249C4368E37F181 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_226C942AB8AB4F1E9682B68358797FE0 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_5F3186A7A4044B12A6BB66697CE58C91 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_13F1CECB0A6B4450B5BBD36E80F039CE }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_C41BF5F6CFF541F4BFA22D8752549366 }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
