Inclusão de frontend e reestruturação de pastas

--- a/backend/Pedido.Api/Pedido.Api.csproj
+++ b/backend/Pedido.Api/Pedido.Api.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\Pedido.Infrastructure\Pedido.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Properties\ServiceDependencies\" />
+  </ItemGroup>
+
 </Project>
